Fix too large table size

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,9 @@
 
 $main-color: #009879;
 
+body {
+    padding-top: 3rem;
+}
 .content-table {
     border-collapse: collapse;
     margin: 0 auto;
@@ -22,7 +25,7 @@ $main-color: #009879;
 
     th,
     td {
-        padding: 12px 15px;
+        padding: 10px 7px;
         text-align: center;
         cursor: pointer;
     }
